vlib/v/checker/tests/modules/module_struct_noinit.out
vlib/v/checker/tests/modules/module_struct_noinit/src/main.v:12:9: error: struct `mod.Foo` is declared with a `@[noinit]` attribute, so it cannot be initialized with `mod.Foo{}`
   10 | 
   11 | fn default_value[T]() T {
   12 |     return T{}
      |            ~~~
   13 | }
vlib/v/checker/tests/modules/module_struct_noinit/src/main.v:12:9: error: struct `mod.Foo2[int]` is declared with a `@[noinit]` attribute, so it cannot be initialized with `mod.Foo2[int]{}`
   10 | 
   11 | fn default_value[T]() T {
   12 |     return T{}
      |            ~~~
   13 | }
